CMF 1.6.3 (2007/02/02)

  No changes since CMF 1.6.3-beta


CMF 1.6.3-beta (2007/01/17)

  Bug Fixes

    - CMFCalendar: Refactored test setup to fix test breakage for Zope 2.9.

    - CMFDefault: The "Sample CMF Content" GenericSetup profile was 
      registered but missing all of its files and necessary interface 
      declarations in the CMFDefault content classes.
      (http://www.zope.org/Collectors/CMF/453)

    - DCWorkflow: Fixed errors and site breakage on GenericSetup import 
      of transitions with variable expressions set.  They were previously 
      being imported as text rather tha Expressions.

    - CMFCore.DynamicType: Fixed behaviour regarding default view.
      DynamicType was making it impossible to use a Zope3-style
      default view for CMF content types.
      (http://www.zope.org/Collectors/CMF/459)


CMF 1.6.2 (2006/08/15)

  Bug Fixes

    - CMFCore.FSDTMLMethod: Add class-default '_owner', to prevent unintended
      acquisition of ownership (http://www.zope.org/Collectors/CMF/450)


CMF 1.6.2-beta (2006/08/08)

  Bug Fixes

    - CMFCore.CatalogTool: Added 'cmf_uid' method to IndexableObjectWrapper
      so that CMFUid UIDs are not acquired during indexing.
      (http://www.zope.org/Collectors/CMF/446)

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)

  Other

    - CMFUid: Removed remnants of CMFSetup. Made sure the extension profile is
      registered for ISiteRoot.

    - CMFDefault + CMFTopic: Made sure extension profiles are registered for
      ISiteRoot.


CMF 1.6.1 (2006/06/09)

  Other

    - Updated GenericSetup to trunk at revision 68556


CMF 1.6.1-beta (2006/06/03)

  Bug Fixes

    - Forward-ported fix for DCWorkflow global actions missing IDs